welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:32: error: reassignment to val
								if (litMessage="L") {
                                                                              ^BDRBuggle:35: error: Boolean does not take parameters
								} else (litMessage=="I") {
                                                                                         ^